--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,3 @@
-.btn {
-    margin: 10px 20px;
-}
-
 .btn_visible {
     display: inline-block;
 }
@@ -33,4 +29,22 @@
     -o-background-size: cover;
     background-size: cover;
     min-height: 100vh;
+}
+
+.controls-background-settings {
+    background-color: #000000;
+    min-height: 160px;
+}
+
+.controls-spacing {
+    min-height: 160px;
+}
+
+.controls-position {
+    max-width: 200px;
+    text-align: center;
+}
+
+.text-color {
+    color: #ffffff;
 }
