--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,11 +53,16 @@ h1 {
     top: 0;
     overflow: auto;
     display: block;
-    background-color: #000000;
+    background-color: #fafafa;
     transition:height 1s ease-out;   
     -moz-transition:height 1s ease-out;   
     -webkit-transition:height 1s ease-out;
     height: 100vh;
+}
+
+.logo-settings {
+    display: none;
+    max-width: 100%;
 }
 
 .menu-settings {
@@ -65,6 +70,17 @@ h1 {
     transition:height 1s ease-out;   
     -moz-transition:height 1s ease-out;   
     -webkit-transition:height 1s ease-out;
+    background-color: #fafafa;
+}
+
+#dropdownMenuLinkColor {
+    margin-left: 10px;
+}
+
+.settings-divider {
+    width: 100%;
+    height: 2px;
+    border: 0px;
     background-color: #000000;
 }
 
@@ -106,7 +122,12 @@ h1 {
 }
 
 .text-color {
-    color: #ffffff;
+    color: #000000;
+}
+
+.warning-text-spacing {
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 
 .modal-header {
@@ -141,6 +162,9 @@ h1 {
 }
 
 @media (min-width: 992px) {
+    .logo-settings {
+        display: block;
+    }
     .card_style {
         width: 180px;
         height: 270px;
