--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,6 +131,10 @@ h1 {
     margin-bottom: 0;
 }
 
+.scroll-fix {
+    pointer-events; none;
+}
+
 .modal-header {
     display: block;
     text-align: center;
