--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,43 +1,10 @@
+/*-- GENERAL STYLING --*/
 body {
     overflow: hidden;
 }
 
 h1 {
     width: 100%;
-}
-
-#game_info {
-    position: relative;
-    width: 100%;
-    top: -100px;
-    transition:top 1s ease-out;   
-    -moz-transition:top 1s ease-out;   
-    -webkit-transition:top 1s ease-out;
-}
-
-.card_box {
-    display: inline-block;
-    max-width: 70px;
-    max-height: 105px;
-}
-
-.card_style {
-    width: 70px;
-    height: 105px;
-}
-
-.card-width-spacing {
-    width: 10px;
-}
-
-.card-height-spacing {
-    height: 10px;
-}
-
-.btn_card_style {
-    background-color: Transparent;
-    border: 0;
-    padding: 0;
 }
 
 .background-styling {
@@ -47,62 +14,6 @@ h1 {
     -o-background-size: cover;
     background-size: cover;
     min-height: 100vh;
-}
-
-.intro-settings {
-    top: 0;
-    position: absolute;
-    z-index: 2;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    display: block;
-    background-color: #fafafa;
-    transition:height 1s ease-out;   
-    -moz-transition:height 1s ease-out;   
-    -webkit-transition:height 1s ease-out;
-    height: 100vh;
-}
-
-.logo-settings {
-    display: none;
-    max-width: 100%;
-}
-
-.menu-settings {
-    height: 100px;
-    z-index: 1;
-    transition:height 1s ease-out;   
-    -moz-transition:height 1s ease-out;   
-    -webkit-transition:height 1s ease-out;
-    background-color: #fafafa;
-}
-
-#dropdownMenuLinkColor {
-    margin-left: 10px;
-}
-
-.settings-divider {
-    width: 100%;
-    height: 2px;
-    border: 0px;
-    background-color: #000000;
-}
-
-.menu-spacing {
-    min-height: 100px;
-}
-
-.settings-window {
-    margin-top: 10px;
-    display: none;
-}
-
-.stats-setting {
-    margin: 0;
-}
-
-.footer-spacing {
-    height: 80px;
 }
 
 .controls-position-4 {
@@ -129,11 +40,107 @@ h1 {
     color: #000000;
 }
 
+/*-- PLAYING CARDS --*/
+.card_box {
+    display: inline-block;
+    max-width: 70px;
+    max-height: 105px;
+}
+
+.card_style {
+    width: 70px;
+    height: 105px;
+}
+
+.card-width-spacing {
+    width: 10px;
+}
+
+.card-height-spacing {
+    height: 10px;
+}
+
+.btn_card_style {
+    background-color: Transparent;
+    border: 0;
+    padding: 0;
+}
+
+/*-- TOP MENU --*/
+#game_info {
+    position: relative;
+    overflow-x: hidden;
+    width: 100%;
+    top: -100px;
+    transition:top 1s ease-out;   
+    -moz-transition:top 1s ease-out;   
+    -webkit-transition:top 1s ease-out;
+}
+
 .warning-text-spacing {
     margin-top: 10px;
     margin-bottom: 0;
 }
 
+.stats-setting {
+    margin: 0;
+}
+
+#dropdownMenuLinkColor {
+    margin-left: 10px;
+}
+
+/*-- INTRO PAGE --*/
+.logo-settings {
+    display: none;
+    max-width: 100%;
+}
+
+.intro-settings {
+    top: 0;
+    position: absolute;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    display: block;
+    background-color: #fafafa;
+    transition:height 1s ease-out;   
+    -moz-transition:height 1s ease-out;   
+    -webkit-transition:height 1s ease-out;
+    height: 100%;
+}
+
+.footer-spacing {
+    height: 80px;
+}
+
+/*-- COLLAPSABLE SETTINGS AREA --*/
+.menu-settings {
+    position: absolute;
+    height: 100px;
+    width: 100%;
+    transition:height 1s ease-out;   
+    -moz-transition:height 1s ease-out;   
+    -webkit-transition:height 1s ease-out;
+    background-color: #fafafa;
+}
+
+.settings-divider {
+    width: 100%;
+    height: 2px;
+    border: 0px;
+    background-color: #000000;
+}
+
+.menu-spacing {
+    min-height: 100px;
+}
+
+.settings-window {
+    margin-top: 10px;
+    display: none;
+}
+
+/*-- MODAL --*/
 .modal-header {
     display: block;
     text-align: center;
@@ -148,7 +155,11 @@ h1 {
     text-align: center;
 }
 
+/*-- MEDIA QUERIES --*/
 @media (min-width: 768px) {
+    .logo-settings {
+        display: block;
+    }
     .card_style {
         width: 120px;
         height: 180px;
@@ -166,9 +177,6 @@ h1 {
 }
 
 @media (min-width: 992px) {
-    .logo-settings {
-        display: block;
-    }
     .card_style {
         width: 180px;
         height: 270px;
