--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,13 @@
 /*-- GENERAL STYLING --*/
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Ubuntu&display=swap');
+
 body {
+    font-family: 'Ubuntu', sans-serif;
     overflow: hidden;
 }
 
 h1 {
+    font-family: 'Bebas Neue', cursive;
     width: 100%;
 }
 
